# TKinterModernThemes

./: .readthedocs.yaml  LICENSE.txt  MANIFEST.in  README.md  requirements.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: main.yml  python-publish.yml  tests.yml
TKinterModernThemes/: ThemeStyles.py  WidgetFrame.py  __init__.py
TKinterModernThemes/examples/: accentbutton.py  allwidgets.py  combinationdemo.py  example.py  examplelauncher.py  font.py  layoutdemo.py  layoutdemooutput.txt  matplotlibexample.py  switch.py  theme_swap.py  togglebutton.py  treeview.py  treeviewdata.json
TKinterModernThemes/themes/: LICENSE.txt
TKinterModernThemes/themes/azure/theme/: dark.tcl
TKinterModernThemes/themes/forest/: forest.tcl
TKinterModernThemes/themes/forest/theme/: dark.tcl  light.tcl
TKinterModernThemes/themes/park/: park.tcl
TKinterModernThemes/themes/park/theme/: dark.tcl  light.tcl
TKinterModernThemes/themes/sun-valley/theme/: dark.tcl  light.tcl
docs/: API.rst  conf.py  index.rst  installation.md  requirements.txt  themes.md
docs/index/: installation.md
tests/: conftest.py  test_themes.py
