[metadata]
name = TKinterModernThemes
description = A collection of modern themes with code that makes it easy to integrate into a tkinter project.
author = Robert Nies
license = MIT
license_file = LICENSE
url = https://github.com/RobertJN64/TKinterModernThemes
author_email = robertjnies@gmail.com
version = 1.10.0
long_description = file: README.md
long_description_content_type = text/markdown
classifiers=
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11


[options]
packages = TKinterModernThemes
python_requires = >=3.7
include_package_data = True
; install_requires =
;     typing_extensions

[options.extras_require]
matplotlib =
    matplotlib